[package]
name = "syiot"
authors = [ "Samuel Noesslboeck <samuel.noesslboeck@gmail.com>" ]
description = "A library for communicating with IOT devices"
version = "0.1.0"
edition = "2021"

[lib]
name = "syiot"
path = "src/lib.rs"

[[bin]]
name = "controller"
path = "bin/controller.rs"

[dependencies]
serialport = "4.2.1"
base64 = "0.21.2"