[package]
name = "syiot"
authors = [ "Samuel Noesslboeck <samuel.noesslboeck@gmail.com>" ]
description = "A library for communicating with IOT devices"
version = "0.1.0"
edition = "2021"

[lib]
name = "syiot"
path = "src/lib.rs"

[[bin]]
name = "control"
path = "bin/control.rs"

[[bin]]
name = "control_client"
path = "bin/control_client.rs"

[[bin]]
name = "serial"
path = "bin/serial.rs"

[dependencies]
serialport = "4.2.1"
base64 = "0.21.2"
message-io = "0.17.0"